Revert "fixing spacing"
This reverts commit ea014289e30119ec5efde997667d217c1d77ccca.

--- a/public/css/front.css
+++ b/public/css/front.css
@@ -1,13 +1,8 @@
-.container {
-    max-width: 3600px;
-}
-
 .front {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 0;
-    margin: 2rem;
 }
 
 .front__text {
